sidebar scrollbar fixed, token6hours, dateSorted

--- a/src/front/js/component/SubjectsPage/subjects.css
+++ b/src/front/js/component/SubjectsPage/subjects.css
@@ -7,6 +7,8 @@
     rgba(113, 5, 97, 0.6208684157256652) 100%
   );
   color: white;
+  margin-left: 200px;
+  height: 50px;
 }
 
 #modalCreateSubject {
