--- a/src/front/styles/dashboard.css
+++ b/src/front/styles/dashboard.css
@@ -14,9 +14,9 @@
     margin-top: 0.5rem;
 }
 .dashboard-wrapper{
-    width: 95%;
-    float: right;
-    margin: 0px;
+    width: auto;
+    float: left;
+    margin-left: 200px;
 }
 
 .row{
