--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -10,8 +10,10 @@ html{
 }
 
 body{
-    background-color: #17171f ;
-    height:100%
+    background-color: #282833 ;
+    height:100%;
+    margin:0;
+    overflow-x: hidden;
 }
 
 .container{
